--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Gestão da Qualidade na APS</title>
+    <title>Biblioteca de componentes</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="recursos/imgs/SI_46.png">
+    <!-- <link rel="shortcut icon" href="recursos/imgs/SI_46.png"> -->
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css">
