--- a/tela-1.html
+++ b/tela-1.html
@@ -1,39 +1,5 @@
-
-<div class="coluna-esquerda altura-1_1 largura-1_1 centro">
-    <img src="recursos/imgs/Qualis_Logo.png" style="position: absolute;width: 196.6px;top: 176px;left: 72px;">
-    <img src="recursos/imgs/Grupo_1413.png" style="position: absolute;width: 130px;bottom: 25.79px;left: 95px;">
-    <img src="recursos/imgs/T1.png" style="width: 1066px; margin-left: -61px;">
+<div class="coluna-esquerda altura-1_1 largura-1_1 centro"
+    style="background-color: #0D536A;display: flex;align-items: center;justify-content: center;">
+    <p style="color: #ffa800;font-size: 43px;font-weight: bolder;">Biblioteca de
+        componentes</p>
 </div>
-<div class="coluna-direita altura-1_1 largura-1_2"
-    style="position: absolute;left: 380px;margin-top: 107px;font-size: 24px;">
-    <p style="font: normal normal normal 24px/35px Poppins;letter-spacing: 0px;color: #294667; width: 390px;">
-        Gestão da Qualidade na APS</p>
-</div>
-
-
-
-
-<!-- 
-
-<div>
-    <div style="display: flex;justify-content: center;align-items: center;">
-        <img src="recursos/imgs/marcaDagua.svg" style="width: 420px;margin-top: 270px;">
-    </div>
-    <div style="position: absolute;top: 70px;">
-        <img class="animate__animated animate__backInLeft" src="recursos/imgs/webSite3.svg"
-            style="width: 550px;margin-top: 70px;margin-left: 180px;">
-        <div style="display: flex;margin-left: 190px;width: 540px;align-items: center;justify-content: space-between;">
-            <p style="width: 220px;text-align: center;font-size: 12px;">QESymposium</p>
-            <p style="width: 247px;text-align: center;font-size: 12px;">OBHA<br> Observatório Brasileiro de Hábitos
-                Alimentares</p>
-        </div>
-    </div>
-</div>
-<button id="copia" style="width: 230px;height: 50px;position: absolute;right: 0;top: 100px;">Copiar</button>
-
-<script>
-    $(document).find('[id^=copia]').click((elemento) => {
-        navigator.clipboard.writeText($(document).contents().find('main').find('#tela').html());
-        console.log($(document).contents().find('main').find('#tela').html());
-    })
-</script> -->
