--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
                 <a onclick="updatePage(73);"><span></span></a>
                 <a onclick="updatePage(74);"><span></span></a>
                 <a onclick="updatePage(75);"><span></span></a>
+                <a onclick="updatePage(76);"><span></span></a>
+                <a onclick="updatePage(77);"><span></span></a>
             </div>
         </nav>
     </footer>
