--- a/tela-76.html
+++ b/tela-76.html
@@ -5,13 +5,13 @@
 </div>
 <div>
     <div style="margin-left: 50px;margin-top: 22px;width: 692px;">
-        <p>Realidade aumentada objeto 3d</p>
+        <p>Realidade aumentada vídeo</p>
         <div style="display: flex;margin-left: 100px;">
             <div style="display: flex;flex-direction: column;align-items: center;"><img style="width: 240px;"
-                    src="recursos/imgs/qrCode3d.svg">
-                <p style="text-align: center;">Abra o link pelo celular para ver o objeto 3D:</p>
-                <a href="https://vandopinto.github.io/realidade-aumentada-fiocruznimm6/index3d.html"
-                    style="text-align: center;">https://vandopinto.github.io/realidade-aumentada-fiocruznimm6/index3d.html</a>
+                    src="recursos/imgs/qrCodevideo.svg">
+                <p style="text-align: center;">Abra o link pelo celular para ver o vídeo:</p>
+                <a href="https://vandopinto.github.io/realidade-aumentada-fiocruznimm6/"
+                    style="text-align: center;">https://vandopinto.github.io/realidade-aumentada-fiocruznimm6</a>
             </div>
             <img style="width: 300px;height: 300px;margin-top: -19px;" src="recursos/imgs/marcador.png">
         </div>
