--- a/tela-59.html
+++ b/tela-59.html
@@ -196,13 +196,12 @@
             positions[index] = { top: objeto.offsetTop, left: objeto.offsetLeft }
         })
 
-        for (const empty of empties) {
-            empty.addEventListener("dragover", dragOver);
-            empty.addEventListener("dragenter", dragEnter);
-            empty.addEventListener("dragleave", dragLeave);
-            empty.addEventListener("drop", dragDrop);
-            voltar.push(null)
-        }
+        empties.map((a, b) => {
+            b.addEventListener("dragover", dragOver);
+            b.addEventListener("dragenter", dragEnter);
+            b.addEventListener("dragleave", dragLeave);
+            b.addEventListener("drop", dragDrop);
+        })
     })
 </script>
 <button onclick="copiarCodigo();" style="width: 140px;height: 30px;position: absolute;right: 20px;top: 13px;">Copiar
